# Lab2QRCode

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  check-format.sh  format-all.sh  version_info.ps1
.github/workflows/: build.yaml  deploy-pages.yaml
docs/: mqtt.md  软件设计文档.md
resources/: i18n.qrc
resources/i18n/: app_en_US.qm
scripts/configure/: generate_translations.ps1
src/: BarcodeWidget.cpp  BarcodeWidget.h  CameraWidget.cpp  CameraWidget.h  FrameWidget.cpp  FrameWidget.h  LanguageManager.cpp  LanguageManager.h  about_dialog.cpp  about_dialog.h  commondef.h  convert.h  main.cpp
src/components/: message_dialog.h
src/mqtt/: MQTTMessageWidget.cpp  MQTTMessageWidget.h  mqtt_client.cpp  mqtt_client.h
src/version_info/: version.h
translations/: app_en_US.ts  app_zh_CN.ts
